Fix T38631: Blender crashes when selection faces after new boolean modifier

Own mistake in edges carve->blender export, didn't count them correct.